--- a/ETO_preprocessing_1.ipynb
+++ b/ETO_preprocessing_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "82708a87",
+   "id": "ff92b577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3517174f",
+   "id": "36df8c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e1899773",
+   "id": "fe6087cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "34571c3b",
+   "id": "32ed35a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "70ad6de9",
+   "id": "e35cf758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b0fcd1b9",
+   "id": "47806681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c64fe990",
+   "id": "289dec0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +77,31 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a1c5c364",
+   "id": "6e626ccc",
    "metadata": {},
    "outputs": [],
    "source": [
     "df3 = df2.bfill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c1617fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4 = df3.drop(df3[(df3.date.dt.day == 29) & (df3.date.dt.month == 6) & (df3.date.dt.year == 2015)].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "e8216327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.to_csv(\"./ds_tractats/df_eto_tractat.csv\", index = False)"
    ]
   }
  ],
