second model "working"

--- a/split_estacion_year.ipynb
+++ b/split_estacion_year.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "years = df_meteo_eto[\"validTimeUtc\"].dt.year.unique()\n",
     "estacions = df_meteo_eto[\"ID_ESTACION\"].unique()\n",
-    "columns_to_store = df_meteo_eto_2.columns\n",
+    "columns_to_store = df_meteo_eto.columns\n",
     "columns_to_store = columns_to_store.drop([\"ID_ESTACION\", \"validTimeUtc\"])"
    ]
   },
@@ -47,7 +47,7 @@
     "\n",
     "for year in years[1:]:\n",
     "    for estacion in estacions:\n",
-    "        df_aux = df_meteo_eto_2.loc[(df_meteo_eto[\"ID_ESTACION\"] == estacion) & (df_meteo_eto_2[\"validTimeUtc\"].dt.year == year),columns_to_store]\n",
+    "        df_aux = df_meteo_eto.loc[(df_meteo_eto[\"ID_ESTACION\"] == estacion) & (df_meteo_eto[\"validTimeUtc\"].dt.year == year),columns_to_store]\n",
     "        df_aux2 = torch.tensor(df_aux.values, dtype=torch.float32)\n",
     "        meteo_eteo_dict[f\"{year}_{estacion}\"] = df_aux2"
    ]
