--- a/obtain_superficie.ipynb
+++ b/obtain_superficie.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "c614474e",
+   "execution_count": 180,
+   "id": "c0e77166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "fdf9034c",
+   "execution_count": 181,
+   "id": "384a39f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "f28a354e",
+   "execution_count": 182,
+   "id": "3e479eb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "9d981418",
+   "execution_count": 184,
+   "id": "79663558",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_9248\\2113395605.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_9248\\3463993660.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "df_temporal = df.drop(axis = 1, columns = [\"CAMPAÑA\", \"ALTITUD\"])\n",
+    "df_temporal = df.drop(axis = 1, columns = [\"CAMPAÑA\",\"PRODUCCION\", \"ALTITUD\"])\n",
     "\n",
     "df_encoded = encoder.fit_transform(df_temporal)\n",
     "\n",
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "256e8ad0",
+   "execution_count": 185,
+   "id": "acfcd0f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "667ec1bf",
+   "execution_count": 186,
+   "id": "a40c422d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "676ed8c4",
+   "execution_count": 187,
+   "id": "603a6882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "1582fc8e",
+   "execution_count": 188,
+   "id": "8efa03f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "6c23f4d0",
+   "execution_count": 189,
+   "id": "1cdd1895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "3775096d",
+   "execution_count": 190,
+   "id": "0124a6b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "8dd12907",
+   "execution_count": 191,
+   "id": "f38d4ae9",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,22 +155,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c76071dd",
+   "execution_count": 194,
+   "id": "adb0d828",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7258566978193146"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import xgboost as xgb\n",
-    "params_model = {'colsample_bytree': 0.4, 'gamma': 0.0, 'learning_rate': 0.15, 'max_depth': 60, 'min_child_weight': 1, 'n_estimators': 1000}\n",
+    "params_model = {'colsample_bytree': 0.4, 'gamma': 0.0, 'learning_rate': 0.15, 'max_depth': 100, 'min_child_weight': 1, 'n_estimators': 2000}\n",
     "model = xgb.XGBClassifier(**params_model)\n",
-    "model.fit(X_train,y_train)\n",
-    "model.score(X_test, y_test)"
+    "model.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0127767f",
+   "execution_count": 205,
+   "id": "5920f216",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7334905660377359"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(model.score(X_test, y_test))\n",
+    "print(model.score(X_train, y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "86b2188b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10b900ee",
+   "execution_count": 196,
+   "id": "a9870538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6306441",
+   "execution_count": 197,
+   "id": "f49d13ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.559937852007629"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import r2_score\n",
     "r2_score(y_test_dec_gt, y_predicted)"
@@ -202,8 +245,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 202,
+   "id": "c8b635da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2120"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "d10acebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.8190414e-04, 3.8513844e-04, 1.7557872e-04, ..., 5.1132516e-05,\n",
+       "        1.1260376e-04, 5.8873522e-04],\n",
+       "       [1.4687682e-04, 4.1054318e-05, 9.5589610e-05, ..., 1.7975106e-04,\n",
+       "        3.6124216e-05, 8.1145583e-05],\n",
+       "       [3.8297463e-04, 1.6848360e-04, 1.4259036e-04, ..., 2.7710092e-04,\n",
+       "        1.7916671e-03, 4.3455581e-04],\n",
+       "       ...,\n",
+       "       [1.2515013e-03, 3.2755014e-04, 1.6364275e-04, ..., 1.5561598e-04,\n",
+       "        5.9414026e-04, 2.9936555e-04],\n",
+       "       [2.1049769e-04, 5.8837293e-05, 2.6087352e-04, ..., 2.5761157e-04,\n",
+       "        5.1771684e-05, 1.1629438e-04],\n",
+       "       [1.4517110e-04, 1.2535493e-04, 3.9822314e-04, ..., 2.7865608e-04,\n",
+       "        1.0341343e-04, 4.9287215e-04]], dtype=float32)"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9b292e45",
+   "id": "000adf3a",
    "metadata": {},
    "outputs": [],
    "source": []
