--- a/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
+++ b/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "id": "e80772ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "id": "e49fbe27",
    "metadata": {},
    "outputs": [],
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "id": "37d6a062",
    "metadata": {},
    "outputs": [],
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "id": "6d8d40d1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "id": "b420ed41",
    "metadata": {},
    "outputs": [],
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "id": "3ace56c8",
    "metadata": {},
    "outputs": [
@@ -84,7 +92,7 @@
      "text": [
       "C:\\Users\\xavid\\anaconda3\\lib\\site-packages\\pandas\\core\\algorithms.py:968: UserWarning: Unable to sort modes: '<' not supported between instances of 'int' and 'str'\n",
       "  warn(f\"Unable to sort modes: {err}\")\n",
-      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_1888\\4024584440.py:3: FutureWarning: ['SUPERFICIE', 'PRODUCCION'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_10212\\4024584440.py:3: FutureWarning: ['SUPERFICIE', 'PRODUCCION'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
       "  df_estacion_gb_mode = df.groupby(by=\"ID_ESTACION\").agg(pd.Series.mode)\n"
      ]
     }
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "id": "cf4dbf4b",
    "metadata": {},
    "outputs": [],
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "af2c6bd3",
    "metadata": {},
    "outputs": [],
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "id": "1eb622dc",
    "metadata": {},
    "outputs": [],
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "id": "583753b5",
    "metadata": {},
    "outputs": [],
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "id": "692f1336",
    "metadata": {},
    "outputs": [
@@ -395,7 +403,7 @@
        "[9601 rows x 13 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "id": "0a2353a8",
    "metadata": {},
    "outputs": [],
@@ -424,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "id": "7ec2e7ca",
    "metadata": {},
    "outputs": [],
@@ -434,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "id": "465853e3",
    "metadata": {},
    "outputs": [],
@@ -444,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "id": "381269f3",
    "metadata": {},
    "outputs": [],
@@ -454,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "id": "2cdf54df",
    "metadata": {},
    "outputs": [
@@ -718,7 +726,7 @@
        "[9601 rows x 14 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "id": "3ffbb514",
    "metadata": {},
    "outputs": [],
@@ -755,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "id": "b24eda11",
    "metadata": {},
    "outputs": [],
@@ -767,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "id": "4d8934da",
    "metadata": {},
    "outputs": [],
@@ -785,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "id": "870ed117",
    "metadata": {},
    "outputs": [],
@@ -796,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "id": "c75593d9",
    "metadata": {},
    "outputs": [],
@@ -808,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "id": "20e12ebb",
    "metadata": {},
    "outputs": [],
@@ -821,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 23,
    "id": "11a78deb",
    "metadata": {},
    "outputs": [],
@@ -839,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "id": "d2788301",
    "metadata": {},
    "outputs": [],
@@ -850,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "id": "79e21fe7",
    "metadata": {},
    "outputs": [],
