--- a/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
+++ b/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
@@ -745,12 +745,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "3ffbb514",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new.to_csv(\"../DATASETS_TRACTATS/TOT.csv\")"
+    "df_new.to_csv(\"../DATASETS_TRACTATS/TOT.csv\", index=False)"
    ]
   },
   {
@@ -775,12 +775,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "4d8934da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new2.to_csv(\"../DATASETS_TRACTATS/TOT_menys14_15.csv\")"
+    "df_new2.to_csv(\"../DATASETS_TRACTATS/TOT_menys14_15.csv\", index=False)"
    ]
   },
   {
@@ -829,12 +829,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "11a78deb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_new3.to_csv(\"../DATASETS_TRACTATS/TOT_fzv_1415.csv\")"
+    "df_new3.to_csv(\"../DATASETS_TRACTATS/TOT_fzv_1415.csv\", index=False)"
    ]
   },
   {
@@ -871,6 +871,24 @@
     "                  (df_new4[\"ID_FINCA_ZONA\"].isin(rows_not_to_drop_id_finca_zona) == True)&\n",
     "                   (df_new4[\"ID_FINCA_ZONA\"].isin(rows_not_to_drop_id_finca_zona) == True))]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ed3250fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new4.to_csv(\"../DATASETS_TRACTATS/TOT_fzv_1421.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b6b3593",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
