delete col id_finca_zona

--- a/MODELS/XGBOOST/xgboosts_categorical.ipynb
+++ b/MODELS/XGBOOST/xgboosts_categorical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b96d7b97",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3c8528ad",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "74465bd7",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dcda601e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import category_encoders as ce\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3d123dc1",
    "metadata": {
     "scrolled": true
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8a37858e",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5d9bdf34",
    "metadata": {},
    "outputs": [],
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "68a402ac",
    "metadata": {},
    "outputs": [],
@@ -151,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "years_to_test2 = X[\"CAMPAÑA\"].unique()\n",
+    "years_to_test2 = df[\"CAMPAÑA\"].unique()\n",
     "model_one_year = {}\n",
     "for year in years_to_test2:\n",
     "    X2 = X[df[\"CAMPAÑA\"] == year]\n",
@@ -159,6 +167,14 @@
     "    m_y = grid(X2, y2)\n",
     "    model_one_year[year] = m_y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25df0b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
