--- a/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
+++ b/PRETRACTAMENT/TRAIN_PREPROCESSING_2.ipynb
@@ -92,7 +92,7 @@
      "text": [
       "C:\\Users\\xavid\\anaconda3\\lib\\site-packages\\pandas\\core\\algorithms.py:968: UserWarning: Unable to sort modes: '<' not supported between instances of 'int' and 'str'\n",
       "  warn(f\"Unable to sort modes: {err}\")\n",
-      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_10212\\4024584440.py:3: FutureWarning: ['SUPERFICIE', 'PRODUCCION'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
+      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_17108\\4024584440.py:3: FutureWarning: ['SUPERFICIE', 'PRODUCCION'] did not aggregate successfully. If any error is raised this will raise in a future version of pandas. Drop these columns/ops to avoid this warning.\n",
       "  df_estacion_gb_mode = df.groupby(by=\"ID_ESTACION\").agg(pd.Series.mode)\n"
      ]
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "870ed117",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "c75593d9",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "20e12ebb",
    "metadata": {},
    "outputs": [],
@@ -829,7 +829,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
+   "id": "969df754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new3 = df_new3.drop(columns= \"ID_FINCA_ZONA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "11a78deb",
    "metadata": {},
    "outputs": [],
@@ -847,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "d2788301",
    "metadata": {},
    "outputs": [],
@@ -858,13 +868,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "79e21fe7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows_not_to_drop_id_finca_zona = df_new3[df_new3[\"CAMPAÑA\"] == \"22\"][\"ID_FINCA_ZONA\"].unique()\n",
-    "rows_not_to_drop_varietat = df_new3[df_new3[\"CAMPAÑA\"] == \"22\"][\"VARIEDAD\"].unique\n",
+    "rows_not_to_drop_id_finca_zona = df_new4[df_new4[\"CAMPAÑA\"] == \"22\"][\"ID_FINCA_ZONA\"].unique()\n",
+    "rows_not_to_drop_varietat = df_new4[df_new4[\"CAMPAÑA\"] == \"22\"][\"VARIEDAD\"].unique\n",
     "years_to_look = [\"14\", \"15\", \"16\", \"17\", \"18\", \"19\", \"20\", \"21\"]\n",
     "df_new4 = df_new4[(df_new4[\"CAMPAÑA\"].isin(years_to_look) == False)|\n",
     "                  ((df_new4[\"CAMPAÑA\"].isin(years_to_look) == True)&\n",
@@ -874,21 +884,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "ed3250fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_new4.to_csv(\"../DATASETS_TRACTATS/TOT_fzv_1421.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b6b3593",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
