new datasets with ALTITUD

--- a/PRETRACTAMENT/METEO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/METEO_preprocessing_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 25,
    "id": "782f1ac7",
    "metadata": {},
    "outputs": [],
@@ -15,27 +15,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 26,
    "id": "ddf7b2d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./UH_2023/DATOS_METEO.txt\", sep = \"|\")"
+    "df = pd.read_csv(\"../UH_2023/DATOS_METEO.txt\", sep = \"|\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 27,
+   "id": "936eca72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.validTimeUtc = pd.to_datetime(df.validTimeUtc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad6a901d",
+   "metadata": {},
+   "source": [
+    "Només necessitem dades horàries, que en tinguem suficients i pel 22."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5f8690bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2015, 2016, 2017], dtype=int64)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"windDirection\"].isna()==True].validTimeUtc.dt.year.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "2f939fa2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_drop = [\"precip2Day\", \"precip3Day\", \"precip7Day\", \"precipMtd\", \"precipYtd\", \"pressureMeanSeaLevel\", \"snow2Day\", \"snow3Day\", \"snow7Day\", \"snowMtd\", \"snowSeason\", \"snowYtd\", \"windDirection\", \"windGust\", \"precip24Hour\", \"precip6Hour\", \"snow24Hour\", \"snow6Hour\", \"temperatureChange24Hour\", \"temperatureMax24Hour\", \"temperatureMin24Hour\"]"
+    "columns_to_drop = [\"precip2Day\", \"precip3Day\", \"precip7Day\", \"precipMtd\", \"precipYtd\", \"pressureMeanSeaLevel\", \"snow2Day\", \"snow3Day\", \"snow7Day\", \"snowMtd\", \"snowSeason\", \"snowYtd\", \"windDirection\", \"windGust\", \"precip24Hour\", \"precip6Hour\", \"snow24Hour\", \"snow6Hour\", \"temperatureChange24Hour\", \"temperatureMax24Hour\", \"temperatureMin24Hour\", \"visibility\", \"uvIndex\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 30,
    "id": "73b6e4d1",
    "metadata": {},
    "outputs": [],
@@ -45,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 31,
    "id": "2c2c8593",
    "metadata": {},
    "outputs": [],
@@ -54,8 +93,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40007671",
+   "metadata": {},
+   "source": [
+    "Hi ha 20 files que falten."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 32,
    "id": "e2f22df7",
    "metadata": {},
    "outputs": [],
@@ -64,18 +111,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 330,
-   "id": "936eca72",
+   "cell_type": "markdown",
+   "id": "3bdce879",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df2.validTimeUtc = pd.to_datetime(df2.validTimeUtc)"
+    "El 13/9/2015 hi ha 7 files que falten a totes les estacions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 33,
    "id": "1ab463eb",
    "metadata": {},
    "outputs": [],
@@ -103,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 34,
    "id": "40fe0d0c",
    "metadata": {},
    "outputs": [],
@@ -115,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 35,
    "id": "0f622bb8",
    "metadata": {},
    "outputs": [],
@@ -138,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 36,
    "id": "71a04d74",
    "metadata": {},
    "outputs": [],
@@ -152,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 37,
    "id": "1b7c2f3d",
    "metadata": {},
    "outputs": [],
@@ -177,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 38,
    "id": "ec507462",
    "metadata": {},
    "outputs": [
@@ -185,13 +230,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adars\\AppData\\Local\\Temp\\ipykernel_3500\\3559150541.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_7368\\3559150541.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_aux.loc[:, \"validTimeUtc\"] = df_aux.loc[:, \"validTimeUtc\"] - pd.Timedelta(hours=10)\n",
-      "C:\\Users\\adars\\AppData\\Local\\Temp\\ipykernel_3500\\3559150541.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\xavid\\AppData\\Local\\Temp\\ipykernel_7368\\3559150541.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -221,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 39,
    "id": "314442b4",
    "metadata": {},
    "outputs": [],
@@ -234,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 40,
    "id": "53cf3366",
    "metadata": {},
    "outputs": [],
@@ -245,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 41,
    "id": "1fab65a9",
    "metadata": {},
    "outputs": [],
@@ -255,12 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 42,
    "id": "cc7594e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_df.to_csv(\"./ds_tractats/df_meteo_tractat.csv\", index = False)"
+    "first_df.to_csv(\"../DATASETS_TRACTATS/df_meteo_tractat.csv\", index = False)"
    ]
   }
  ],
