--- a/PRETRACTAMENT/ETO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/ETO_preprocessing_1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "ff92b577",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "36df8c62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./UH_2023/DATOS_ETO.txt\", sep = \"|\")"
+    "df = pd.read_csv(\"../UH_2023/DATOS_ETO.txt\", sep = \"|\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "fe6087cb",
    "metadata": {},
    "outputs": [],
@@ -35,8 +43,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a3fd02c",
+   "metadata": {},
+   "source": [
+    "No hi ha dades pel 2022"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "id": "32ed35a0",
    "metadata": {},
    "outputs": [],
@@ -46,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "e35cf758",
    "metadata": {},
    "outputs": [],
@@ -56,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "id": "47806681",
    "metadata": {},
    "outputs": [],
@@ -66,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
    "id": "289dec0f",
    "metadata": {},
    "outputs": [],
@@ -76,12 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "id": "6e626ccc",
    "metadata": {},
    "outputs": [],
    "source": [
     "df3 = df2.bfill()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c1d642",
+   "metadata": {},
+   "source": [
+    "No necessitem el 29 de juny per la campanya 16."
    ]
   },
   {
@@ -103,6 +127,14 @@
    "source": [
     "df4.to_csv(\"./ds_tractats/df_eto_tractat.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776ae29a",
+   "metadata": {},
+   "source": [
+    "Mirar-nos visibilitat"
+   ]
   }
  ],
  "metadata": {
@@ -121,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
