--- a/PRETRACTAMENT/join_meteo_eto.ipynb
+++ b/PRETRACTAMENT/join_meteo_eto.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "37f66445",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "275ffd19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_meteo = pd.read_csv(\"./ds_tractats/df_meteo_tractat.csv\", index_col = False)\n",
-    "df_eto = pd.read_csv(\"./ds_tractats/df_eto_tractat.csv\", index_col = False)"
+    "df_meteo = pd.read_csv(\"../DATASETS_TRACTATS/df_meteo_tractat.csv\", index_col = False)\n",
+    "df_eto = pd.read_csv(\"../DATASETS_TRACTATS/df_eto_tractat.csv\", index_col = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "dafc98b5",
    "metadata": {},
    "outputs": [],
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "8004fb0c",
    "metadata": {},
    "outputs": [],
@@ -46,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "390d7095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_meteo_eto.to_csv(\"./ds_tractats/df_meteo_eto.csv\", index = False)"
+    "df_meteo_eto.to_csv(\"../DATASETS_TRACTATS/df_meteo_eto.csv\", index = False)"
    ]
   },
   {
