--- a/PRETRACTAMENT/ETO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/ETO_preprocessing_1.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "id": "ff92b577",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "36df8c62",
    "metadata": {},
    "outputs": [],
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "fe6087cb",
    "metadata": {},
    "outputs": [],
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "id": "32ed35a0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "id": "e35cf758",
    "metadata": {},
    "outputs": [],
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "id": "47806681",
    "metadata": {},
    "outputs": [],
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "id": "289dec0f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "id": "6e626ccc",
    "metadata": {},
    "outputs": [],
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "id": "c1617fd5",
    "metadata": {},
    "outputs": [],
@@ -120,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "id": "e8216327",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4.to_csv(\"./ds_tractats/df_eto_tractat.csv\", index = False)"
+    "df4.to_csv(\"../DATASETS_TRACTATS/df_eto_tractat.csv\", index = False)"
    ]
   },
   {
